[workspace]
members = [ "lambdas/cognito-authorizer", "lambdas/create-post", "lambdas/delete-post","lambdas/get-post", "lambdas/get-posts", "shared"]
resolver = "2"

[workspace.package]
description = "An AWS Lambda blog API written in Rust"
version = "0.0.46"
edition = "2021"
license = "MIT"
repository = "https://github.com/londonbrown/blog-lambdas"

[workspace.dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.67.0"
lambda_http = "0.14.0"
serde_json = "1.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"]  }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-log = "0.2.0"
chrono = "0.4.40"
reqwest = "0.12.14"
jsonwebtoken = "9.3.1"
uuid = { version = "1.15.1", features = ["v4"] }

