[workspace]
members = ["lambdas/*", "shared"]
resolver = "2"

[workspace.package]
description = "An AWS Lambda blog API written in Rust"
version = "0.0.85"
edition = "2021"
license = "MIT"
repository = "https://github.com/londonbrown/blog-lambdas"

[workspace.dependencies]
aws-config = { version = "1.6.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.71.2"
aws-sdk-s3 = "1.82.0"
aws-sdk-cognitoidentityprovider = "1.75.0"
aws-sdk-secretsmanager = "1.68.0"
aws_lambda_events = "0.16.0"
base64 = "0.22.1"
lambda_runtime = "0.13.0"
serde_json = "1.0"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
chrono = "0.4.40"
uuid = { version = "1.16.0", features = ["v4"] }
reqwest = { version = "0.12.15", default-features = false, features = ["rustls-tls", "json"] }
jsonwebtoken = "9.3.1"
