[package]
name = "shared"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
serde.workspace = true
serde_dynamo.workspace = true
aws-sdk-dynamodb.workspace = true
aws_lambda_events.workspace = true
tracing.workspace = true
serde_json.workspace = true
