[package]
name = "cognito-authorizer"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aws_lambda_events.workspace = true
lambda_runtime.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
