[package]
name = "create-content"
version.workspace = true
edition.workspace = true

[dependencies]

aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws-sdk-s3.workspace = true
aws_lambda_events.workspace = true
lambda_runtime.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../../shared" }
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
base64.workspace = true
