[package]
name = "create-post"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lambda_http.workspace = true
tokio.workspace = true
serde = { version = "1.0.218", features = ["derive"] }
serde_json.workspace = true
shared = { path = "../../shared"}
uuid = { version = "1.15.1", features = ["v4"] }
chrono.workspace = true
tracing.workspace = true
