[package]
name = "create-post"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws_lambda_events.workspace = true
lambda_runtime.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../../shared"}
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
