[package]
name = "get-post"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
lambda_http.workspace = true
serde_json.workspace = true
serde_dynamo.workspace = true
tokio.workspace = true
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
tracing.workspace = true
