[package]
name = "get-post"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
lambda_http.workspace = true
serde_json.workspace = true
serde_dynamo.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
shared = { path = "../shared"}
