[package]
name = "get-post"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
aws_lambda_events.workspace = true
lambda_runtime.workspace = true
serde_json.workspace = true
tokio.workspace = true
serde.workspace = true
shared = { path = "../../shared" }
