[package]
name = "guest-jwt-generator"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aws_lambda_events.workspace = true
lambda_runtime.workspace = true
tracing.workspace = true
tokio.workspace = true
